<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.vos.MightyMouse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <view class="com.vos.MightyMouse.TrackPad"
        android:id="@+id/trackPad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="#A9A9A9"
        custom:showText="false" />
    
    <!-- these will be the buttons. both the button and the text have to 
         go in a linear layout.-->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="bottom">
	        
	        <Button
	            android:id="@+id/leftClick"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:layout_weight="1"
				android:text="@string/L" />     
				
	        <Button
	            android:id="@+id/rightClick"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:layout_weight="1"
				android:text="@string/R" />  
				
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        <!-- android:layout_alignParentBottom="true"-->
	        
	        <Button
	            android:id="@+id/button_edit_text_delete"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/delete" />
	        
	        <EditText
	            android:id="@+id/edit_text_out"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_gravity="bottom"
	            android:layout_weight="1"
	            android:inputType="textNoSuggestions|textMultiLine" 
	            android:singleLine="false"/>
	
	        <Button
	            android:id="@+id/button_send"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/send" />
	    </LinearLayout>
	</LinearLayout>

</RelativeLayout>
